css/style.css
body {
  margin: 0;
  display: grid;
  place-items: center;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  align-items: center;
  height: 100vh;
  background: #2c2c2c;
}

.cabinet {
  display: flex;
  flex-direction: column; /* HUD arriba, juego abajo */
  align-items: center;
  gap: 8px; /* separación entre HUD y juego */
  padding: 12px;

  /* aspecto "arcade" */
  border: 8px solid #111;
  border-radius: 12px;
  background: #1a1a1a;
  box-shadow: 0 12px 40px rgba(0, 0, 0, 0.7);
}



.menu-screen canvas {
  width: min(92vw, 480);
  aspect-ratio: 9/16;
  background: linear-gradient(to top, #4fc3f7, #b3e5fc);
  border: 8px solid #222;
  border-radius: 10px;
  box-shadow: 0 0 0 8px #111 inset, 0 10px 30px rgba(0, 0, 0, 0.45);
}

.hud {
  width: 100%;
  display: flex;
  justify-content: space-between;
  color: #013a63;
  padding: 6px 12px;
  font-size: 0.9rem;
  color: #013a63;
  box-sizing: border-box;
}

/* .hud .hint {
  font-weight: 500;
  opacity: 0.8;
} */

.game {
  width: min(92vw, 480px); /* max ~GameBoy-ish width */
  aspect-ratio: 9 / 16; /* tall portrait game box */
  position: relative;
  overflow: hidden;

  /* sky */
  background: linear-gradient(to top, #4fc3f7, #b3e5fc);

  /* retro bezel/border */
  border: 6px solid #222;
  border-radius: 10px;
  box-shadow: 0 0 0 8px #111 inset, 0 10px 30px rgba(0, 0, 0, 0.45);
}

#player,
#obstacle,
#goal {
  position: absolute;
  bottom: 0;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

#player {
  width: 10%;
  height: 20%;
  left: 4%;
  background-image: url("../assets/images/panda1.png");
}

#obstacle {
  width: 8%;
  height: 22%;
  right: -10%;
  filter: drop-shadow(0 0 6px white);
  background-image: url("../assets/images/spourwater.png");
}

#goal {
  width: 10%;
  height: 22%;
  right: 3%;
  background-image: url("../assets/images/yatch.png");
}

#game-over {
  position: absolute;
  top: 8%;
  left: 50%;
  transform: translate(-50%);
  margin: 0;
  padding: 8px 14px;
  border-radius: 6px;
  font-weight: 800;
  letter-spacing: 0.5px;
  color: #c1121f;
  background: rgba(255, 255, 255, 0.85);
  border: 2px solid #8a1c1c;
  white-space: nowrap;
}

@media (max-width: 420px) {
  .hud {
    width: 94vw;
    font-size: 0.95rem;
  }
}

